[S07P22D203-605|BACK] 그림 조회 테스트
Former-commit-id: 3a4e5e827cdd320bd61024c46300e0c60d3158da [formerly a5f7d012544013036410d2db9bd5aad6d9b342d5]
Former-commit-id: 68d4021897d106770420c51e8e9a94be4c710b13